# xiangqi-ralph-test

./: .gitignore  @fix_plan.md  AGENTS.md  CLAUDE.md  Procfile  RULES.md  agents.md  jieqi_main.py  justfile  overall-test.md  pyproject.toml  streamlit_app.py  test.md
.sisyphus/: ralph-loop.local.md
backend/: main.py  package-lock.json  pyproject.toml  streamlit_app.py
data/: ai_comparison.json  test_positions.json  v004_defensive.html  v005_aggressive.html  v007_reveal.html  v008_lookahead.html  v009_coordination.html  v010_fast.html  v011_minimax.html
docs/: README.md  architecture.md  archived_strategies.md  fen-spec.md  p1-architecture.md  p1-fen-display.md  p2-endgames.md  p2-streamlit.md  p2-verbose-output-format.md  p3-random-endgames.md  rust-ai-api.md  search-visualization.md  streamlit.md  streamlit_debug.md  streamlit_e2e_tests.md  testing.md  verification.md
engine/: __init__.py  attack_tables.py  battle.py  bitboard.py  board.py  fen.py  fen_test.py  game.py  game_log.py  game_log_test.py  hidden_pool.py  piece.py  positions.py  rust_ai.py  simulation.py  strategies.py  ui.py  view.py
frontend/: package-lock.json  package.json  playwright.config.ts
jieqi/: __init__.py  ai_cli.py  ai_cli_test.py  ai_dashboard.py  attack_tables.py  fen.py  (+12 more)
rust-ai/: Cargo.toml  README.md
rust-ai/examples/: debug_b2e2.rs  debug_black_moves.rs  debug_king_reveal.rs  eval_position.rs  gen_fen_after_move.rs  generate_test_cases.rs  opening_2steps.rs  opening_analysis.rs
rust-ai/src/: ai.rs  board.rs  fen.rs  lib.rs  main.rs  test_positions.rs  types.rs
rust-ai/src/ai/: aggressive.rs  defensive.rs  greedy.rs  iterative.rs  mcts.rs  minimax.rs  mod.rs  muses.rs  muses2.rs  muses3.rs  positional.rs  pvs.rs  random.rs
rust-ai/src/ai/it2/: mod.rs  readme.md
rust-ai/src/ai/it3/: eval.rs  mod.rs  readme.md
(+284 files in other folders)
