[project]
name = "engine"
version = "0.1.0"
description = "Jieqi (Banqi/Dark Chess) engine with AI and web interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.0",
    "streamlit>=1.53.0",
    "plotly>=6.5.2",
    "typer>=0.9.0",
    "watchdog>=6.0.0",
    "matplotlib>=3.10.8",
    "weasyprint>=68.0",
    "arrow>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=engine --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["miaosisrai-jieqi-src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP"]
ignore = ["N806"]  # Allow UPPER_CASE constants inside functions

[tool.coverage.run]
source = ["engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
